# VRC-Worlds-Manager-v2

./: .gitignore  ARCHITECTURE_DIAGRAM.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README_JP.md  TESTING_SORT_FEATURE.md  changelog.json  eslint.config.mjs  package-lock 2.json  package-lock.json  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs
src-tauri/src/api/: common.rs  mod.rs
src-tauri/src/api/auth/: definitions.rs  logic.rs  mod.rs
src-tauri/src/api/favorite/: definitions.rs  logic.rs  mod.rs
src-tauri/src/api/group/: definitions.rs  logic.rs  mod.rs
src-tauri/src/api/instance/: definitions.rs  logic.rs  mod.rs
src-tauri/src/backup/: logic.rs  mod.rs
src-tauri/src/commands/: api_commands.rs  changelog.rs  data_commands.rs  folder_commands.rs  image_cache_commands.rs  memo_commands.rs  mod.rs  open_folder_commands.rs  patreon_cache.rs  patreons.rs  preferences_commands.rs
src-tauri/src/definitions/: entities.rs  mod.rs
src-tauri/src/logging/: definitions.rs  mod.rs  worker.rs
src-tauri/src/migration/: definitions.rs  logic.rs
src-tauri/src/services/: api_service.rs  encryption_service.rs  export_service.rs  file_service.rs  folder_manager.rs  folder_service.rs  image_cache.rs  initialize_service.rs  memo_manager.rs  migration_service.rs  mod.rs  share_service.rs  sorting_service.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/updater/: update_handler.rs
src-tauri/src/utils/: config.rs
(+153 files in other folders)
